other_configs/cluser_policy.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-private-node-affinity-in-staging
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: enforce-node-affinity
      match:
        any:
          - resources:
              kinds:
                - Deployment
                - StatefulSet
                - DaemonSet
                - Job
                - CronJob
              namespaces:
                - staging
      mutate:
        patchStrategicMerge:
          spec:
            template:
              spec:
                affinity:
                  nodeAffinity:
                    requiredDuringSchedulingIgnoredDuringExecution:
                      nodeSelectorTerms:
                        - matchExpressions:
                            - key: eks.amazonaws.com/nodegroup
                              operator: In
                              values:
                                - dolana-private-nodegroup
